--- a/wsr/pom.xml
+++ b/wsr/pom.xml
@@ -48,6 +48,10 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 </project>
