--- a/wsr/.project
+++ b/wsr/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wsr</name>
+	<name>logcop-jira-reports</name>
 	<comment></comment>
 	<projects>
 	</projects>
