update from home.

--- a/wsr/src/main/resources/properties/weekly-status-report.properties
+++ b/wsr/src/main/resources/properties/weekly-status-report.properties
@@ -11,3 +11,4 @@ author.name=Chuck Emmons
 author.title=LOGCOP Project Manager
 author.type=(CTR)
 docx.path=/JIRA.docx
+default.report.path=C:/wsr_dev
