--- a/wsr/src/main/resources/properties/report.properties
+++ b/wsr/src/main/resources/properties/report.properties
@@ -1,14 +1,10 @@
 #########################################
 # Status Report Attributes
 #########################################
-report.title=LOGCOP Weekly Status Report
+wsr.report.title=LOGCOP Weekly Status Report
 report.weekendingdate=07 JAN 1911
 report.classification=UNCLASSIFIED//FOUDO
-sprint.number=0
-sprint.startdate=01 JAN 1911
-sprint.enddate=01 FEB 1911
 author.name=Chuck Emmons
 author.title=LOGCOP Project Manager
 author.type=(CTR)
-docx.path=/JIRA.docx
-default.report.path=C:/wsr_dev
+default.report.path=C:/wsr_dev/reports
