--- a/wsr/pom.xml
+++ b/wsr/pom.xml
@@ -48,10 +48,15 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
       <version>1.4</version>
+    </dependency> -->
+    <dependency>
+      <groupId>com.cee</groupId>
+      <artifactId>csv-parser</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
