wsr is working now

--- a/wsr/src/main/resources/properties/report.properties
+++ b/wsr/src/main/resources/properties/report.properties
@@ -1,7 +1,7 @@
 #########################################
 # Status Report Attributes
 #########################################
-wsr.report.title=LOGCOP_Weekly_Status_Report
+wsr.report.title=LOGCOP Weekly Status Report
 report.weekendingdate=07 JAN 1911
 report.classification=UNCLASSIFIED//FOUDO
 author.name=Chuck Emmons
