fixed time so partial hours works.

--- a/wsr/src/main/resources/properties/report.properties
+++ b/wsr/src/main/resources/properties/report.properties
@@ -7,4 +7,5 @@ report.classification=UNCLASSIFIED//FOUDO
 author.name=Chuck Emmons
 author.title=LOGCOP Project Manager
 author.type=(CTR)
-default.report.path=C:/wsr_dev/reports
+#default.report.path=C:/wsr_dev/reports
+default.report.path=
