--- a/wsr/.classpath
+++ b/wsr/.classpath
@@ -28,5 +28,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/charles.e.emmons/Desktop/jira-rest-java-client-core-2.0.0-m19.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
