--- a/wsr/pom.xml
+++ b/wsr/pom.xml
@@ -6,7 +6,45 @@
   <name>logcop-jira-reports</name>
   <description>used to create the weekly status report</description>
   
+  
+ <!-- <repositories>
+  <repository>
+    <id>atlassian-public</id>
+      <url>https://maven.atlassian.com/repository/public</url>
+      <snapshots>
+    <enabled>true</enabled>
+    <updatePolicy>never</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+       <releases>
+         <enabled>true</enabled>
+         <checksumPolicy>warn</checksumPolicy>
+      </releases>
+</repository>
+  </repositories> -->
+  
+  <properties>
+    <jira-api.version>6.1.1</jira-api.version>
+    <jira-rest-java-client-core.version>3.0.0</jira-rest-java-client-core.version>
+    <httpcore.version>4.4.1</httpcore.version>
+    <pojomatic.version>2.0.1</pojomatic.version>
+  </properties>
+  
+  
   <dependencies>
+  
+  <!-- <dependency>
+    <groupId>com.atlassian.jira</groupId>
+    <artifactId>jira-rest-java-client-api</artifactId>
+    <version>2.0.0-m25</version>
+</dependency>
+
+<dependency>
+    <groupId>com.atlassian.jira</groupId>
+    <artifactId>jira-rest-java-client-core</artifactId>
+    <version>2.0.0-m25</version>
+</dependency> -->
+  
     <!-- to parse the spreadsheet -->
     <dependency>
       <groupId>org.apache.poi</groupId>
@@ -67,5 +105,66 @@
       <artifactId>csv-parser</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <!-- <dependency>
+      <groupId>org.openengsb.wrapped</groupId>
+      <artifactId>jira-rest-java-client-api</artifactId>
+      <version>2.0.0-m32.w1</version>
+    </dependency> -->
+    
+    <!-- <dependency>
+      <groupId>com.atlassian.jira</groupId>
+      <artifactId>jira-rest-java-client</artifactId>
+      <version>Version of the library you use</version>
+    </dependency> -->
+    
+    <!-- 
+    whate we need
+    <dependency>
+        <groupId>com.atlassian.jira</groupId>
+        <artifactId>jira-api</artifactId>
+        <version>${jira-api.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.atlassian.jira</groupId>
+        <artifactId>jira-rest-java-client-core</artifactId>
+        <version>${jira-rest-java-client-core.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.2.1-atlassian-2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpasyncclient</artifactId>
+      <version>4.0-beta3-atlassian-1</version>
+    </dependency> -->
+    
+
+    <!-- <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>${httpcore.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>${httpcore.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore-nio</artifactId>
+        <version>${httpcore.version}</version>
+    </dependency> -->
+
+    <!-- what we need
+    <dependency>
+        <groupId>org.pojomatic</groupId>
+        <artifactId>pojomatic</artifactId>
+        <version>${pojomatic.version}</version>
+    </dependency> -->
+
+    
   </dependencies>
 </project>
